--- a/ana/anars/Cargo.toml
+++ b/ana/anars/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cursive = { git = "https://github.com/gyscos/cursive" }
+log = "0.4.17"
+simple-logging = "2.0.2"
