run anagram check on input

--- a/ana/Cargo.toml
+++ b/ana/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10.2"
 cursive = { git = "https://github.com/gyscos/cursive" }
 log = "0.4.17"
 simple-logging = "2.0.2"
